2003-03-07  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Richard.

	- fixed 3127705 - don't open new window on opt-click even if the link requests it
	- fixed 3143971 - cmd-click should override the target="_blank" and target="_new" (important for tabs)
	
        * kwq/KWQKHTMLPart.h:
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::openURL): Don't use findOrCreateFrameNamed, instead pass target along.
        (KWQKHTMLPart::openURLRequest): Likewise.
        (KWQKHTMLPart::submitForm): Likewise.
        (KWQKHTMLPart::urlSelected): Likewise.
        * kwq/KWQKHTMLPartBrowserExtension.mm:
        (KHTMLPartBrowserExtension::createNewWindow): Likewise.
        * kwq/WebCoreBridge.h:

2003-03-07  David Hyatt  <hyatt@apple.com>

        better fix for text-decoration issue on time.com.  
	
        Reviewed by mjs

        * khtml/css/cssstyleselector.cpp:
        * khtml/rendering/render_style.h:

2003-03-07  David Hyatt  <hyatt@apple.com>

	Fix for time.com regression.  Don't allow text-decoration to
	apply to anchor elements with no href.
	
        Reviewed by darin

        * khtml/css/cssstyleselector.cpp:

2003-03-07  David Hyatt  <hyatt@apple.com>

	Whoops. Fix regression causedb y previous checkin.
	
        Reviewed by darin

        * khtml/css/cssstyleselector.cpp:

2003-03-07  David Hyatt  <hyatt@apple.com>

	Make the :hover:active behavior much more sophisticated
	(and make it match WinIE, since that buggy browser is what
	necessitates this hack).
	
        Reviewed by darin

        * khtml/css/cssstyleselector.cpp:

2003-03-06  David Hyatt  <hyatt@apple.com>

	Fix for 3156125, regression on hiptop.com.  Caused by better
	nowrap handling perversely enough.  Need another quirk from
	Moz/WinIE to make this site behave.
	
        Reviewed by darin

        * khtml/rendering/render_table.cpp:
        (RenderTableCell::calcMinMaxWidth):
        (RenderTableCell::setStyle):

2003-03-06  Darin Adler  <darin@apple.com>

        Reviewed by John.
